tests/baselines/reference/extendedInterfacesWithDuplicateTypeParameters.errors.txt
==== tests/cases/compiler/extendedInterfacesWithDuplicateTypeParameters.ts (3 errors) ====
    interface InterfaceWithMultipleTypars<A, A> { // should error
                                          ~
!!! extendedInterfacesWithDuplicateTypeParameters.ts(1,39): error TS2000: Duplicate identifier 'A'.
        bar(): void;
    }
    
    interface InterfaceWithSomeTypars<B> { // should not error
        bar(): void;
    }
    
    interface InterfaceWithSomeTypars<C, C> { // should error
              ~~~~~~~~~~~~~~~~~~~~~~~
!!! extendedInterfacesWithDuplicateTypeParameters.ts(9,11): error TS2234: All declarations of an interface must have identical type parameters.
                                      ~
!!! extendedInterfacesWithDuplicateTypeParameters.ts(9,35): error TS2000: Duplicate identifier 'C'.
        bar2(): void;
    }